--- a/spec/fixtures/books.yml
+++ b/spec/fixtures/books.yml
@@ -1,7 +1,11 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-# one:
-#   column: value
-#
-# two:
-#   column: value
+rw:
+    title: "The Rails Way"
+    isbn: "9780321445612"
+    edition: "1"
+    
+ia:
+    title: "Inteligência Artificial"
+    isbn: "9788535211771"
+    edition: "2"
