--- a/spec/fixtures/copies.yml
+++ b/spec/fixtures/copies.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-# one:
-#   column: value
-#
-# two:
-#   column: value
+rw1:
+    book_id: 1
+    copy_number: "00101"
+
+rw1:
+    book_id: 1
+    copy_number: "00102"
